--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -57,7 +57,7 @@
       margin-left: 90px
       @media screen and ( max-width: 1200px )
         margin-left: 0
-      @media screen and ( max-width: 700px )
+      @media screen and ( max-width: 930px )
         width: 100%
       @media screen and ( max-width: 400px )
         max-width: 380px
